# rag-llm

./: .gitignore  README.md  compose.yml  pull-models.sh
rag-api/: Dockerfile.dev  Dockerfile.prod  database.py  database_milvus.py  index.py  pyproject.toml  scrap_geo.py  server_process.py  watcher.py
rag-api/base/: async_utils.py  fuzzy_search.py  json_parse.py  json_search.py  logger.py  profile.py  request.py  serialize.py  services.py  utils.py
rag-api/entities/: article_location.py  location_relation.py  location_tags.py
rag-api/prompts/: article_geo_location.py  default.py  gliner_geo_tag.py  location_mapper.py  location_tree.py  ollama_geo_tag.py
rag-api/providers/: nominatim_provider.py  overpass_provider.py
rag-api/scraper/: fixed_locations.json  location.py  locations.py  nominatim_provider.py  overpass_provider.py  wiki_locations.py  wiki_provider.py
